# python-fastapi-scaffold

./: .env  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
auth/: __init__.py  auth_repository.py  auth_router.py  auth_service.py
dtos/: __init__.py  auth_dto.py  user_dto.py
migrations/: env.py
migrations/versions/: d7781a7168d5_creating_user_table.py
tests/: conftest.py
tests/users/: create_user_test.py  delete_user_test.py  get_user_test.py  get_users_test.py  update_user_test.py
users/: __init__.py  user_entity.py  user_repository.py  user_router.py  user_service.py
